--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token":"NzkzNTA2OTA5MjYwNzQyNjk2.X-tQ5Q.7TkHR91OoMIPSm9jQoxL5CIXkRQ",
+    "token":"",
     "prefix":">",
-    "mongoPath":"mongodb://localhost:27017"
+    "mongoPath":""
 }
